--- a/ExpenseEngine/ExpenseEngine.Worker/ExpenseEngine.Worker.csproj
+++ b/ExpenseEngine/ExpenseEngine.Worker/ExpenseEngine.Worker.csproj
@@ -1,20 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>c9f71e5c-6afe-464f-9284-549c7c6a8828</UserSecretsId>
+    <UserSecretsId>dotnet-ExpenseEngine.Worker-83CE6B53-BE1F-495D-B9B7-4670B8DC3D01</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
 </Project>
